@startuml

interface Appareil <<interface>>{
    +allumer() : void
    +eteindre() : void
}

class Lampe{
    -nom : String
    -allume : boolean
    +Lampe(nom : String) : Lampe
    +allumer() : void
    +eteindre() : void
    +isAllume() : boolean
    +toString() : String
}

class Telecommande{
    +Telecommande() : Telecommande
    +allumer() : void
    +eteindre() : void
    +ajouterAppareil(Appareil appareil) : void
    +activerAppareil(int indiceAppareil) : void
    +desactiverAppareil(int indiceAppareil) : void
    +activerTout() : void
    +desactiverTout() : void
    +toString() : String
}

class Hifi{
    -son : int
    +allumer() : void
    +eteindre() : void
    +toString() : String
}

class Cheminee{
    -intensité : int
    +Cheminee() : Cheminee
    +changerIntensite(int i) : void
    +getLumiere () : int
    +toString() : String
}

class ChemineeAdaptateur{
    +allumer() : void
    +eteindre() : void
}

class Thermostat{
}

class ThermosAdaptateur{
    +allumer() : void
    +eteindre() : void
}




ThermosAdaptateur ..|> Appareil
Appareil <|.. Lampe
Appareil <|.. Hifi
Appareil <|.. ChemineeAdaptateur
Cheminee <|-- ChemineeAdaptateur

Thermostat <- ThermosAdaptateur : -thermostat
Appareil "*" <- "*" Telecommande : - appareils

@enduml